# wakeword

./: .env.example  Dockerfile  Dockerfile.cuda  LICENSE  README.md  docker-compose.cuda.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
cache/jobs/: d2c046b4-c01b-40c2-a7d9-4503182be8b7.json
examples/: python_client.py
examples/android/: WakeWordDetector.kt
examples/dart/: wake_word_detector.dart
examples/esp32/wake_word_detector/: wake_word_detector.ino
examples/typescript/: README.md  index.html  package.json  tsconfig.json  wakeword-client.ts
models/jarvis/: config.json  model.pt
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_integration.py  test_job_manager.py  test_model.py  test_tts_generator.py
wakeword/: __init__.py  app.py  config.py  job_manager.py  model.py  tts_generator.py
