[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wakeword"
version = "0.1.0"
description = "Open source wake word training and detection server"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Josh-XT", email = "josh@devxt.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
keywords = ["wake-word", "voice-assistant", "speech-recognition", "tts", "edge-ai"]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "pydub>=0.25.1",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
    "gTTS>=2.4.0",
    "edge-tts>=6.1.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
cuda = [
    "chatterbox-tts",
]
client = [
    "pyaudio>=0.2.14",
    "webrtcvad>=2.0.10",
]

[project.scripts]
wakeword-server = "wakeword.app:main"

[project.urls]
Homepage = "https://github.com/Josh-XT/wakeword"
Repository = "https://github.com/Josh-XT/wakeword"
Issues = "https://github.com/Josh-XT/wakeword/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["wakeword*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
